# m-gpux

./: .gitignore  README.md  _get_workspace.py  _regen.py  _test_auth.py  _test_full.py  fix_docs.py  mkdocs.yml  pyproject.toml  test_inference.py  test_modal.py
.github/workflows/: deploy-pages.yml  publish-pypi.yml
docs/: architecture.md  commands.md  compose.md  dev-container.md  faq.md  getting-started.md  index.md  presets.md  recipes.md  sessions.md  vision.md  web-hosting.md
docs/stylesheets/: extra.css
examples/host-asgi/: README.md  main.py
examples/host-static/: README.md  app.js  index.html  style.css
examples/host-wsgi/: README.md  app.py
m-gpux-ui/: index.html  package-lock.json  package.json  tailwind.config.js
m-gpux-ui/src/: App.jsx  index.css
m-gpux-ui/src/components/home/: FeaturesGrid.jsx  Hero.jsx  InstallationTabs.jsx  TerminalMockup.jsx
m-gpux-ui/src/components/layout/: Footer.jsx  Navbar.jsx
m-gpux-ui/src/layouts/: DashboardLayout.jsx
m-gpux-ui/src/pages/: LandingPage.jsx
m-gpux-ui/src/pages/dashboard/: ApiKeys.jsx  Billing.jsx  Deploy.jsx  Playground.jsx  Settings.jsx
m-gpux-vscode/: .vscodeignore  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
m-gpux-vscode/src/: accountTree.ts  actionsTree.ts  config.ts  extension.ts  hubWizard.ts  statusBar.ts
m_gpux/: __init__.py  main.py
m_gpux/commands/: _ui.py  account.py  billing.py  hub.py  load.py  serve.py  video.py  vision.py
m_gpux/core/: __init__.py  console.py  gpus.py  metrics.py  plugin.py  profiles.py  runner.py  state.py
m_gpux/plugins/: __init__.py
m_gpux/plugins/account/: plugin.py
m_gpux/plugins/billing/: plugin.py
m_gpux/plugins/compose/: plugin.py
m_gpux/plugins/dev/: plugin.py
m_gpux/plugins/host/: plugin.py
m_gpux/plugins/hub/: plugin.py
m_gpux/plugins/info/: plugin.py
m_gpux/plugins/load/: plugin.py
m_gpux/plugins/preset/: plugin.py
m_gpux/plugins/serve/: plugin.py
m_gpux/plugins/sessions/: plugin.py
m_gpux/plugins/stop/: plugin.py
m_gpux/plugins/video/: plugin.py
m_gpux/plugins/vision/: plugin.py
openclaw-skill/m-gpux/: SKILL.md
