[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m-gpux"
version = "0.1.0"
description = "A powerful hub and CLI for managing Modal GPUs, Accounts, and Workspaces"
readme = "README.md"
dependencies = [
    "modal>=0.62.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tomlkit>=0.12.0"
]

[project.scripts]
m-gpux = "m_gpux.main:app"
