[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m-gpux"
version = "2.4.0"
description = "Professional CLI toolkit for Modal GPU workflows, account management, and billing visibility"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "PuxHocDL" }
]
keywords = ["modal", "gpu", "cli", "machine-learning", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "modal>=0.62.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tomlkit>=0.12.0",
    "pyyaml>=6.0.2"
]

[project.urls]
Homepage = "https://github.com/PuxHocDL/m-gpux"
Documentation = "https://puxhocdl.github.io/m-gpux/"
Repository = "https://github.com/PuxHocDL/m-gpux"
Issues = "https://github.com/PuxHocDL/m-gpux/issues"

[project.scripts]
m-gpux = "m_gpux.main:app"

[tool.setuptools.packages.find]
include = ["m_gpux*"]

# Built-in plugins are listed here so that they are discoverable as
# m_gpux.plugins entry-points after installation, alongside any third-party
# plugins users may install. See m_gpux.core.plugin.discover_plugins.
[project.entry-points."m_gpux.plugins"]
account = "m_gpux.plugins.account.plugin:AccountPlugin"
billing = "m_gpux.plugins.billing.plugin:BillingPlugin"
compose = "m_gpux.plugins.compose.plugin:ComposePlugin"
dev = "m_gpux.plugins.dev.plugin:DevPlugin"
hub = "m_gpux.plugins.hub.plugin:HubPlugin"
host = "m_gpux.plugins.host.plugin:HostPlugin"
load = "m_gpux.plugins.load.plugin:LoadPlugin"
preset = "m_gpux.plugins.preset.plugin:PresetPlugin"
serve = "m_gpux.plugins.serve.plugin:ServePlugin"
sessions = "m_gpux.plugins.sessions.plugin:SessionsPlugin"
video = "m_gpux.plugins.video.plugin:VideoPlugin"
vision = "m_gpux.plugins.vision.plugin:VisionPlugin"
info = "m_gpux.plugins.info.plugin:InfoPlugin"
stop = "m_gpux.plugins.stop.plugin:StopPlugin"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "twine>=5.1.1"
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6"
]
